<resources>

    <!-- Acciones comunes -->
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="close">Cerrar</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="update">Actualizar</string>
    <string name="continue_text">Continuar</string>
    <string name="back">Volver</string>

    <!-- Autenticación -->
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="register_title">Registro</string>
    <string name="name">Nombre</string>
    <string name="error_complete_fields">Completa todos los campos</string>
    <string name="ready_to_register">Listo para registrar</string>
    <string name="error_short_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="register_success">Usuario creado correctamente</string>
    <string name="register_save_error">Error guardando usuario</string>


    <string name="error_empty_field">Este campo no puede estar vacío</string>
    <string name="error_invalid_email">Correo inválido</string>
    <string name="error_wrong_credentials">Credenciales incorrectas</string>
    <string name="error_generic">Ha ocurrido un error</string>


    <string name="loading">Cargando…</string>
    <string name="please_wait">Por favor espera…</string>
    <string name="success">Operación exitosa</string>
    <string name="are_you_sure">¿Estás seguro?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>


    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="settings">Configuración</string>
    <string name="search">Buscar</string>


    <string name="add">Agregar</string>
    <string name="new_item">Nuevo</string>
    <string name="item_saved">Guardado correctamente</string>
    <string name="item_deleted">Eliminado correctamente</string>


    <string name="app_name">MedTrack</string>


    <string-array name="sexo_array">
        <item>Seleccione sexo</item>
        <item>M</item>
        <item>F</item>

    </string-array>

    <string-array name="actividad_array">
        <item>Seleccione nivel actividad</item>
        <item>sedentario</item>
        <item>ligero</item>
        <item>moderado</item>
        <item>intenso</item>
    </string-array>
    <string name="imc_estado">Estado IMC</string>



</resources>
